# pepper

./: .gitignore  .travis.yml  1_helen_make_images.py  1_pepper_make_images.py  2_helen_call_consensus.py  2_helen_generate_haplotypes.py  2_pepper_call_consensus.py  3_helen_call_variants.py  3_helen_stitch.py  3_pepper_stitch.py  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  call_consensus.py  generate_images.py  helen_call_variants.py  helen_debug_model.py  helen_generate_haplotypes.py  helen_make_images.py  helen_train.py  hyperparameter_tuning.py  pepper.py  pepper_train.py  predict_fake.py  requirements.txt  setup.py  setup.py.orig  test.py  train.py
docker/: Dockerfile  pepper_wrapper.sh
docs/: HiFi_polishing.md  HiFi_variant_calling.md  ONT_polishing.md  ONT_variant_calling.md  PEPPER_microbial_data_polishing.md  PEPPER_variant_calling.md
docs/docker_gpu/: ONT_polishing_gpu.md  ONT_variant_calling_gpu.md
docs/local_install/: install_pepper_locally.md
docs/misc/: pepper_methods.md  pepper_v0.7_method_update.md
docs/module_usage/: module_usage.md  pipeline_usage.md
modules/: htslib.cmake  pybind11.cmake
pepper/: pepper.py  pepper_train.py  version.py
pepper_hp/: 1_pepper_make_images.py  3_pepper_stitch.py  4_pepper_find_candidates.py  5_merge_vcf.py  pepper_hp.py  pepper_hp_train.py
pepper_snp/: 1_pepper_make_images.py  2_pepper_call_consensus.py  3_pepper_find_snps.py  CMakeLists.txt  pepper_snp.py  pepper_snp_train.py  pepper_train.py
pepper_variant/: pepper_variant.py  pepper_variant_train.py
(+290 files in other folders)
